--- a/amridm2mqtt.systemd.service
+++ b/amridm2mqtt.systemd.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 User=root
-ExecStart=/opt/amridm2mqtt/amridm2mqtt
+ExecStart=/usr/bin/python3 /opt/amridm2mqtt/amridm2mqtt
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=amridm2mqtt
